[package]
name = "rapier_revolute_test"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
iced = { version = "0.12.1", features = ["canvas", "tokio", "debug", "lazy"] }
rapier2d = "0.18.0"
time = { version = "0.3", features = ["local-offset"] }
